WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201875
WebPaymentCoordinatorProxy does not need sessionIDs
https://bugs.webkit.org/show_bug.cgi?id=201875
Summary
WebPaymentCoordinatorProxy does not need sessionIDs
Chris Dumez
Reported
2019-09-17 10:48:03 PDT
WebPaymentCoordinatorProxy does not need sessionIDs so let's stop passing them around.
Attachments
Patch
(15.10 KB, patch)
2019-09-17 10:49 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2019-09-17 10:49:10 PDT
Created
attachment 378974
[details]
Patch
Geoffrey Garen
Comment 2
2019-09-17 11:47:33 PDT
Comment on
attachment 378974
[details]
Patch r=me
WebKit Commit Bot
Comment 3
2019-09-17 12:30:55 PDT
Comment on
attachment 378974
[details]
Patch Clearing flags on attachment: 378974 Committed
r249975
: <
https://trac.webkit.org/changeset/249975
>
WebKit Commit Bot
Comment 4
2019-09-17 12:30:57 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2019-09-17 12:31:21 PDT
<
rdar://problem/55449109
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug